[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Joar Wandborg <joar@wandborg.se>"]

[[bin]]
name = "life"
path = "src/life.rs"

[[bin]]
name = "life-again"
path = "src/life-again.rs"

[dependencies]
piston = "0.27.0"
piston2d-graphics = "0.19.0"
pistoncore-sdl2_window = "0.33.0"
piston2d-opengl_graphics = "0.37.0"
shader_version = "0.2.0"

