[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Joar Wandborg <joar@wandborg.se>"]

[[bin]]
name = "life"
path = "src/life.rs"

[[bin]]
name = "life-again"
path = "src/life-again.rs"

[[bin]]
name = "world-test"
path = "src/world-test.rs"

[dependencies]
log = "0.3"
env_logger = "0.3"
rand = "0.3"
ref_eq = "1.0.0"

piston = "0.27.0"
piston2d-graphics = "0.19.0"
piston_window = "0.61.0"
piston2d-opengl_graphics = "0.37.0"
shader_version = "0.2.1"
#pistoncore-sdl2_window = "0.38.0"
pistoncore-glutin_window = "0.33.0"

nalgebra = "0.10.1"
