[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Joar Wandborg <joar@wandborg.se>"]

[[bin]]
name = "game-of-life"
path = "src/life.rs"

[dependencies]
log = "0.3"
env_logger = "0.3"
rand = "0.3"

clap = "2"

piston = "0.27.0"
piston2d-graphics = "0.19.0"
piston_window = "0.61.0"
piston2d-opengl_graphics = "0.37.0"
shader_version = "0.2.1"
pistoncore-glutin_window = "0.33.0"
